- Fix broken styles on gradient scroll mixin 	- Now uses $offwhite global variable to generate gradient - Fix broken links on appnav - Revert navbar gradient back to old see-through style

--- a/app/styles/mixins/_layout-mixins.scss
+++ b/app/styles/mixins/_layout-mixins.scss
@@ -25,6 +25,7 @@
   border-color: nth($purple-list, 6);
 }
 
+$offwhite-trans: transparentize($offwhite, 1);
 @mixin gradient-scroll-mixin($bottom-val: 0px) {
     position: absolute;
     z-index: 1;
@@ -32,12 +33,12 @@
     width: 100%;
     height: 70px;
     pointer-events: none;
-    background: -moz-linear-gradient(top, rgba(221,221,220,0) 40%, rgba(221,221,220,1) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(40%,rgba(221,221,220,0)), color-stop(100%,rgba(221,221,220,1)));
-    background: -webkit-linear-gradient(top, rgba(221,221,220,0) 40%,rgba(221,221,220,1) 100%);
-    background: -o-linear-gradient(top, rgba(221,221,220,0) 40%,rgba(221,221,220,1) 100%);
-    background: -ms-linear-gradient(top, rgba(221,221,220,0) 40%,rgba(221,221,220,1) 100%);
-    background: linear-gradient(to bottom, rgba(221,221,220,0) 40%,rgba(221,221,220,1) 100%);
+    background: -moz-linear-gradient(top, $offwhite-trans 40%, $offwhite 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(40%,$offwhite-trans), color-stop(100%, $offwhite));
+    background: -webkit-linear-gradient(top, $offwhite-trans 40%,$offwhite 100%);
+    background: -o-linear-gradient(top, $offwhite-trans 40%,$offwhite 100%);
+    background: -ms-linear-gradient(top, $offwhite-trans 40%,$offwhite 100%);
+    background: linear-gradient(to bottom, $offwhite-trans 40%,$offwhite 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00dddddc', endColorstr='#dddddc',GradientType=0 );
 }
 
